--- a/Event/two.html
+++ b/Event/two.html
@@ -8,5 +8,28 @@
 <body style="background-color: yellow ; color : red; animation">
 
 <h1> hello</h1>
+<button id="stop">stop</button>
 
 </body>
+
+<script>
+
+ //setTimeout(function(){
+    //console.log("Mahendra");
+
+//},2000)  
+
+const sayMahendra = function(){
+    console.log("Mahendra");
+}
+//document.querySelector('h1').innerHTML = "Mahendra Kumawat"
+//setTimeout(sayMahendra,2000)
+
+const changeText
+
+document.querySelector('#stop').addEventListener('Click',function(){
+    clearTimeout(changeMe)
+    console.log("STOPPED")
+})
+</script>
+</html>
