--- a/Event/two.html
+++ b/Event/two.html
@@ -23,9 +23,12 @@ const sayMahendra = function(){
     console.log("Mahendra");
 }
 //document.querySelector('h1').innerHTML = "Mahendra Kumawat"
-//setTimeout(sayMahendra,2000)
+//setTimeout(sayMahendra,2000) // this is also do this 
 
-const changeText
+const changeText = function(){
+    document.querySelector('h1').innerHTML= "Mahendra"
+}
+const changeMe = setTimeout(changeText,2000) // this programe change the h1 nanme in 2 second 
 
 document.querySelector('#stop').addEventListener('Click',function(){
     clearTimeout(changeMe)
