--- a/Event/three.html
+++ b/Event/three.html
@@ -11,7 +11,7 @@
     <button id="stop">Stop</button>
 </body>
 <script>
-    const sayDate = function(str){
+    const sayDate = function(str){// crate a function for 
         console.log(str, Date.now());
     }
 
