--- a/Event/two.html
+++ b/Event/two.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>htnml Events </title>
 </head>
-<body style="background-color: yellow ; color : red; animation">
 
-<h1> hello</h1>
-<button id="stop">stop</button>
+<body style="background-color: yellow ; color : red;">
+    <h1> hello my name is Mahendra </h1>
+    <button id="stop">stop</button>
 
 </body>
 
 <script>
 
- //setTimeout(function(){
+    //setTimeout(function(){
     //console.log("Mahendra");
 
-//},2000)  
+    //},2000)  
 
-const sayMahendra = function(){
-    console.log("Mahendra");
-}
-//document.querySelector('h1').innerHTML = "Mahendra Kumawat"
-//setTimeout(sayMahendra,2000) // this is also do this 
+    const sayMahendra = function () {
+        console.log("Mahendra");
+    }
+    //document.querySelector('h1').innerHTML = "Mahendra Kumawat"
+    //setTimeout(sayMahendra,2000) // this is also do this 
 
-const changeText = function(){
-    document.querySelector('h1').innerHTML= "Mahendra"
-}
-const changeMe = setTimeout(changeText,2000) // this programe change the h1 nanme in 2 second 
+    const changeText = function () {
+        document.querySelector('h1').innerHTML = "Mahendra"
+    }
+    const changeMe = setTimeout(changeText, 2000) // this programe change the h1 nanme in 2 second 
 
-document.querySelector('#stop').addEventListener('Click',function(){
-    clearTimeout(changeMe)
-    console.log("STOPPED")
-})
+    document.querySelector('#stop').addEventListener('click', function () {
+        clearTimeout(changeMe)
+        console.log("STOPPED")
+    })
 </script>
+
 </html>
