--- a/Event/two.html
+++ b/Event/two.html
@@ -37,6 +37,15 @@
         console.log(str,Date.now());
     }
     setInterval(sayDate, 1000, "hiii Baby")
+
+    const intervalid = setInterval(SayDate,)
+
+
+
+
+
+
+
     document.querySelector('#start').addEventListener('click', function () { 
         changeMe = setTimeout(changeText, 4000); // this programe change the h1 nanme in 2 second 
 
