--- a/test/index.html
+++ b/test/index.html
@@ -3,19 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Number Guessing Game</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="../styles.css" />
+    <title>Event KeyCodes</title>
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
+ 
   </head>
-  <body >
+  <body>
     <nav>
-    <h1>hello</h1>
+     
     </nav>
+    <div class="project">
+      <div id="insert">
+        <div class="key">Press the key and watch magic</div>
+      </div>
+    </div>
 
-    <h1>Start should change the Background color every second</h1>
-    <button id="start">Start</button>
-    <button id="stop">Stop</button>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
