--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@
     </nav>
     <div class="project">
       <div id="insert">
-        <div class="key">Press the key and watch magic</div>
+        <div class="key">Press the key and watch magic..</div>
       </div>
     </div>
 
