--- a/Dom/four.html
+++ b/Dom/four.html
@@ -47,7 +47,7 @@ const firstLang = document.querySelector("li:first-child")
 firstLang.outerHTML = '<li>TypeScript</li>'
 
 
-// remove the value of last element
+// remove the value of last element =
 const lastLang = document.querySelector('li:last-child')
     lastLang.remove()
 
